// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Footer test testing action click 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "action1",
      },
      Object {
        "execute": [MockFunction],
        "name": "action2",
      },
    ]
  }
>
  <ActionGroup>
    <div
      className="pf-c-form__group pf-m-action"
    >
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-c-form__actions"
        >
          <Button
            key="submit-action1"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id={2}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Action1
            </button>
          </Button>
          <Button
            key="submit-action2"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id={3}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Action2
            </button>
          </Button>
        </div>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing actions 1`] = `
<FormFooter
  actions={
    Array [
      Object {
        "execute": [MockFunction],
        "name": "action1",
        "primary": true,
      },
      Object {
        "execute": [MockFunction],
        "name": "action2",
      },
    ]
  }
>
  <ActionGroup>
    <div
      className="pf-c-form__group pf-m-action"
    >
      <div
        className="pf-c-form__group-control"
      >
        <div
          className="pf-c-form__actions"
        >
          <Button
            key="submit-action1"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id={0}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Action1
            </button>
          </Button>
          <Button
            key="submit-action2"
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            <button
              aria-disabled={false}
              aria-label={null}
              className="pf-c-button pf-m-primary"
              data-ouia-component-id={1}
              data-ouia-component-type="PF4/Button"
              data-ouia-safe={true}
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              Action2
            </button>
          </Button>
        </div>
      </div>
    </div>
  </ActionGroup>
</FormFooter>
`;

exports[`Form Footer test testing showing empty actions 1`] = `
<FormFooter
  actions={Array []}
/>
`;

exports[`Form Footer test testing showing no actions 1`] = `<FormFooter />`;
